--- a/web/core/templates/base.html
+++ b/web/core/templates/base.html
@@ -27,11 +27,11 @@
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+                            <a class="nav-link" href="#">Sair</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Entrar</a>
+                            <a class="nav-link" href="#">Entrar</a>
                         </li>
                     {% endif %}
                 </ul>
